atualizar codigo